--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
@@ -51,7 +54,6 @@ dependencies {
 
 
     implementation 'androidx.recyclerview:recyclerview:1.2.0-rc01' // RecyclerView
-
 
 
 }
